--- a/MyTaskManagment/src/tela/TelaPrincipal.form
+++ b/MyTaskManagment/src/tela/TelaPrincipal.form
@@ -131,7 +131,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/img/bacgroundOff.PNG"/>
+              <Image iconType="3" name="/img/bac2.PNG"/>
             </Property>
             <Property name="verifyInputWhenFocusTarget" type="boolean" value="false"/>
           </Properties>
