--- a/MyTaskManagment/src/tela/NewTelaLogin.form
+++ b/MyTaskManagment/src/tela/NewTelaLogin.form
@@ -239,6 +239,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="| Entrar"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblEntarMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
